# SolMate

./: .env.example  .env.production  .gitignore  Anchor.toml  BACKEND_IMPLEMENTATION.md  DAPP_STORE_READINESS.md  DEPLOYMENT.md  DEPLOYMENT_ESCROW.md  FUNDING_WALLET.md  IMPLEMENTATION_SUMMARY.md  MULTIPLAYER_SETUP.md  PENDING_FIX.md  QUICKSTART.md  QUICKSTART_MULTIPLAYER.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT_tmp.html  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  test-escrow.js  tsconfig.json
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/sol_mate_escrow/: Cargo.toml
anchor/programs/sol_mate_escrow/src/: errors.rs  lib.rs  state.rs
anchor/programs/sol_mate_escrow/src/instructions/: abandon_match.rs  cancel_match.rs  confirm_payout.rs  create_match.rs  force_refund.rs  join_match.rs  mod.rs  submit_result.rs  withdraw_fees.rs
android-twa/: android.keystore  app-release-bundle.aab  app-release-signed.apk  app-release-signed.apk.idsig  app-release-unsigned-aligned.apk  assetlinks.json  manifest-checksum.txt  twa-manifest.json
android-twa/app/: build.gradle
app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
backend/: DEPLOYMENT.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json  railway.toml
components/: ChessGame.tsx  ChessGame.tsx.bak  MultiplayerChess.tsx  Navigation.tsx  WalletBalanceWarning.tsx  WalletButton.tsx  WalletProvider.tsx
public/: _redirects  manifest.json  privacy.html  terms.html
scripts/: fee-manager.ts
utils/: escrow.ts  sol_mate_escrow.json
(+26 files in other folders)
