[package]
name = "sol_mate_escrow"
version = "0.1.0"
description = "SolMate escrow program for chess match wagering"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_mate_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
blake3 = { version = "1.5", default-features = false }
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
anchor-spl = "0.27.0"
